--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Javascript Test</title>
-    <script type="text/javascript" src="popup.js"></script>
+    <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
     <h1>Test</h1>
