Added header changing function, tweaked existing functions

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
-    <h1>Test</h1>
-    <p>same</p>
+    <h1 id="pageheading">Old Heading</h1>
+    <p>Paragraph</p>
   </body>
 </html>
