Added paragraph click function

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1 id="pageheading">Old Heading</h1>
-    <p>Paragraph</p>
+    <p id="paragraph">Old Paragraph</p>
   </body>
 </html>
