Added function to change paragraph on click

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1 id="pageheading">Old Heading</h1>
-    <p id="paragraph">Old Paragraph</p>
+    <p id="paragraph">Click anywhere on the page to change me</p>
+    <p id="paragraph2">Click me to change me</p>
   </body>
 </html>
