Added stylesheet, added hover paragraph change, commented out alert

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Javascript Test</title>
+    <link rel="stylesheet" type="text/css" href="css/css.css">
     <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
     <h1 id="pageheading">Old Heading</h1>
     <p id="paragraph">Click anywhere on the page to change me</p>
     <p id="paragraph2">Click me to change me</p>
+    <p id="paragraph3">Hover on me to change me</p>
   </body>
 </html>
